# arm_screencapture

./: .gitmodules  CMakeLists.txt  Version.h.in
cmake/: BundleUtilities.cmake  CodeCoverage.cmake  CommonInit.cmake  CreateOpkg.cmake  DeployQt4.cmake  DeployQt5.cmake  FindCISCL.cmake  FindEDSDK.cmake  FindEnet.cmake  FindExif.cmake  FindExiv2.cmake  FindFFMPEG.cmake  FindGCrypt.cmake  FindGPGME.cmake  FindGphoto.cmake  FindGraphicsIpp.cmake  FindGwx.cmake  FindIpp.cmake  FindJsoncpp.cmake  FindLibSSL.cmake  FindLibgomp.cmake  FindMarble.cmake  FindNsl2.cmake  FindOpenCV.cmake  FindOpenCV310.cmake  FindPanorama11.cmake  FindPcap.cmake  FindProj4.cmake  FindProtobuf.cmake  FindPwGis.cmake  FindPwLogger.cmake  FindQCommandLine.cmake  FindQHttpServer.cmake  FindQJson.cmake  FindQSerial.cmake  FindQSerialPort.cmake  FindQtAV.cmake  FindQtSingleApplication.cmake  FindQxt.cmake  FindROHC.cmake  (+13 more)
cmake/win32/: NSIS.template.in
redist/QtAV/5.9/lib_msvc/Debug/: QtAVWidgetsd1.lib  QtAVd1.lib
redist/QtAV/5.9/lib_msvc/Release/: QtAV1.lib  QtAVWidgets1.lib
redist/ffmpeg/lib_msvc/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  mfx.lib  swresample.lib  swscale.lib
src/: CMakeLists.txt
src/ScreenGrabber/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScreenGrabber_ru.ts  images.qrc  main.cpp
src/ScreenGrabberCore/: CMakeLists.txt  QtAVMuxerWorker.cpp  QtAVMuxerWorker.h  ScreenGrabberCore_ru.ts  ThreadSafeBool.h  ThreadedController.cpp  ThreadedController.h  ThreadedQObject.cpp  ThreadedQObject.h  ffmpegTools.cpp  ffmpegTools.h
